--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
 appdirs==1.4.3
+astroid==1.4.9
+backports.functools-lru-cache==1.3
+configparser==3.5.0
+google-api-python-client==1.6.2
+httplib2==0.10.3
+isort==4.2.5
+lazy-object-proxy==1.2.2
+mccabe==0.6.1
 numpy==1.12.1
+oauth2client==4.0.0
 packaging==16.8
+pkg-resources==0.0.0
+pyasn1==0.2.3
+pyasn1-modules==0.0.8
+pylint==1.6.5
 pyorbital==1.1.1
 pyparsing==2.2.0
+rsa==3.4.2
 six==1.10.0
+uritemplate==3.0.0
+wrapt==1.10.10
